[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "Timer3"
version = "0.0.1"
authors = [
  { name="ValidIdiot", email="valididotexists@gmail.com" },
]
description = "Timer Module for Python 3"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ValidIdiot/Timer3"
"Bug Tracker" = "https://github.com/ValidIdiot/Timer3/issues"